web/main.css
* {
  margin: 0;
  padding: 0;
}

body,
html {
  font-size: 10px;
  background-color: #111;
  font-family: "IM Fell English SC", serif;
}

main {
  padding: 0 3rem;
}

/* typography */

h1,
h2,
h3,
p,
img,
li {
  color: #fff;
  margin-bottom: 1.8rem;
  font-weight: normal;
  line-height: 1.6;
}

h1,
h2,
h3 {
  text-align: center;
  padding-top: 3rem;
}

h1 {
  padding-top: 0;
  font-size: 3.2rem;
}

h2 {
  font-size: 2.8rem;
}

h3 {
  font-size: 2.4rem;
}

li,
p {
  color: #ccc;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  font-size: 1.8rem;
}

.list {
  padding-left: 5rem;
}

.list li {
  margin: 0;
}

img {
  max-width: 100%;
  height: auto;
}

/* navigation */

.logo {
  margin: 0 auto;
  max-width: 50%;
  text-align: center;
  display: block;
}

.logo img {
  margin: 0;
}

button {
  background: #333;
  border-radius: 3px;
  border: 0;
  border: 2px solid #666666;
  color: #fff;
  font-family: "IM Fell English SC", serif;
  font-size: 1.6rem;
  padding: 5px 10px;
}

.score {
  background-image: url(assets/img/score-board.png);
  background-repeat: no-repeat;
  color: #fff;
  font-family: "IM Fell English SC", serif;
  height: 116px;
  left: -25px;
  position: absolute;
  text-align: center;
  text-decoration: none;
  top: -25px;
  width: 116px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.number,
.desc {
  line-height: 1;
}

.number {
  font-size: 4.6rem;
}

.desc {
  margin-top: 5px;
  font-size: 1.4rem;
}

.active {
  border-color: #fff;
}

.sortby {
  margin-bottom: 3rem;
}

.sortby p {
  color: #fff;
  text-align: center;
  font-size: 2rem;
}

.sortby ul {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.dice-list li,
.sortby li {
  padding: 1rem;
  list-style: none;
  text-align: center;
  margin-bottom: 1rem;
}

.dice-list a {
  display: inline-block;
  position: relative;
}

footer {
  padding: 2rem;
  text-align: center;
}

/* navigation */

.nav-main ul {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.nav-main li {
  list-style: none;
  padding: 10px;
  margin: 0;
}

.nav-main strong,
.nav-main a,
footer a {
  font-family: "IM Fell English SC", serif;
  font-size: 1.8rem;
  line-height: 2;
  color: #fff;
}

.nav-main a:link,
.nav-main a:visited {
  color: #666;
}
.nav-main a:hover,
.nav-main a:active,
.nav-main a:focus {
  color: #fff;
}

